Fix horizontal scroll on mobile.

--- a/static/css/includes/footer.less
+++ b/static/css/includes/footer.less
@@ -130,7 +130,7 @@ footer {
         }
 
         #footer-shape2 {
-            right: -80px;
+            background-position: 180px 0px;
         }
 
         .container {
